sentiment classifier added, reddit training data added

--- a/Reddit Web Scaping.ipynb
+++ b/Reddit Web Scaping.ipynb
@@ -16,7 +16,6 @@
    "outputs": [],
    "source": [
     "import praw\n",
-    "import json\n",
     "import pandas as pd\n",
     "from praw.models import MoreComments"
    ]
@@ -243,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exporting dara to a csv file.\n",
+    "# Exporting data to a csv file.\n",
     "comments_df.to_csv(post_name+\".csv\",index=False)"
    ]
   },
