--- a/Sentiment Classifier.ipynb
+++ b/Sentiment Classifier.ipynb
@@ -93,7 +93,6 @@
     "    \n",
     "    Args:\n",
     "        text (str): the input text you want to clean\n",
-    "        remove_stopwords (bool): whether or not to remove stopwords\n",
     "    Returns:\n",
     "        str: the cleaned text\n",
     "    \"\"\"\n",
@@ -191,6 +190,7 @@
     "class SentimentAnalysis(BaseEstimator, TransformerMixin):\n",
     "    \"\"\"\n",
     "    Class used to generate sentiment.\n",
+    "    take boolean argument add_senti for whether to add sentiment to the dataframe.\n",
     "    \"\"\"\n",
     "    def __init__(self, add_senti:bool):\n",
     "        self.add_senti = add_senti\n",
