--- a/Sentiment Classifier.ipynb
+++ b/Sentiment Classifier.ipynb
@@ -816,7 +816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We achieved an improvement in accuracy of 1.89% after tuning."
+    "I achieved an improvement in accuracy of 0.27% after tuning."
    ]
   },
   {
@@ -999,7 +999,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The logistic regression model get an improvement in accuracy of 1.89% after grid search tuning, and it is the best model with accuracy of 0.852 compare to random forest model, it will be used for classification on the test data set that we scrapped earlier on Reddit."
+    "The logistic regression model get an improvement in accuracy of 1.34% after grid search tuning, and it is the best model with accuracy of 0.847 compare to random forest model, it will be used for classification on the test data set that I scrapped earlier on Reddit."
    ]
   },
   {
